@@ -1,6 +1,7 @@
 - implemented IOC-358 - add ability to specify dependency on an embedded resource
 - implemented IOC-357 - Provide some internal logging in Windsor to be able to see non-critical errors
 - implemented IOC-355 - Add a mechanism to mark constructors as unselectable for injection, much like DoNotWireAttribute is for property injection (contributed by Rory Plaire)
+- implemented IOC-353 - Add Classes.FromAssemblyInThisApplication() for parity with FromAssembly class
 
 - fixed IOC-356 - Specifying a hook should be enough to create an implementation-less proxy
 - fixed IOC-354 - Deadlock in pooled lifestyle under heavy load
